--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -3,7 +3,6 @@
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
   <template class="BzWindow" parent="AdwApplicationWindow">
-    <property name="title" translatable="yes">Bazaar</property>
     <property name="default-width">1500</property>
     <property name="default-height">1200</property>
     <property name="width-request">400</property>
@@ -22,7 +21,7 @@
                 <property name="sidebar">
                   <object class="AdwViewStack" id="transactions_stack">
                     <property name="enable-transitions">TRUE</property>
-                    <property name="transition-duration">400</property>
+                    <property name="transition-duration">200</property>
                     <child>
                       <object class="AdwViewStackPage">
                         <property name="name">empty</property>
@@ -30,7 +29,7 @@
                         <property name="child">
                           <object class="AdwStatusPage">
                             <property name="icon-name">folder-download-symbolic</property>
-                            <property name="title">Transactions Will Appear Here</property>
+                            <property name="title" translatable="yes">Transactions Will Appear Here</property>
                           </object>
                         </property>
                       </object>
@@ -116,7 +115,7 @@
                         <property name="child">
                           <object class="AdwViewStack" id="main_stack">
                             <property name="enable-transitions">TRUE</property>
-                            <property name="transition-duration">400</property>
+                            <property name="transition-duration">200</property>
                             <child>
                               <object class="AdwViewStackPage">
                                 <property name="name">offline</property>
@@ -163,6 +162,21 @@
                                     </binding>
                                     <signal name="install" handler="full_view_install_cb" swapped="true" object="BzWindow"/>
                                     <signal name="remove" handler="full_view_remove_cb" swapped="true" object="BzWindow"/>
+                                  </object>
+                                </property>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="AdwViewStackPage">
+                                <property name="name">installed</property>
+                                <property name="title" translatable="yes">Installed</property>
+                                <property name="child">
+                                  <object class="BzInstalledPage">
+                                    <binding name="model">
+                                      <lookup name="installed">BzWindow</lookup>
+                                    </binding>
+                                    <signal name="install" handler="installed_page_install_cb" swapped="true" object="BzWindow"/>
+                                    <signal name="remove" handler="installed_page_remove_cb" swapped="true" object="BzWindow"/>
                                   </object>
                                 </property>
                               </object>
@@ -233,9 +247,68 @@
                 <property name="icon-name">software-update-available-symbolic</property>
               </object>
             </child>
+            <property name="title-widget">
+              <object class="GtkBox" id="title_widget">
+                <property name="orientation">horizontal</property>
+                <property name="homogeneous">TRUE</property>
+                <property name="spacing">3</property>
+                <child>
+                  <object class="GtkToggleButton" id="curated_btn">
+                    <style>
+                      <class name="flat"/>
+                    </style>
+                    <property name="has-tooltip">TRUE</property>
+                    <property name="tooltip-text" translatable="yes">View Curated Applications</property>
+                    <property name="child">
+                      <object class="GtkBox">
+                        <property name="orientation">horizontal</property>
+                        <property name="spacing">6</property>
+                        <child>
+                          <object class="GtkImage">
+                            <property name="icon-name">starred-symbolic</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label" translatable="yes">Curated</property>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
+                    <signal name="toggled" handler="page_toggled_cb" swapped="true" object="BzWindow"/>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkToggleButton" id="installed_btn">
+                    <style>
+                      <class name="flat"/>
+                    </style>
+                    <property name="has-tooltip">TRUE</property>
+                    <property name="tooltip-text" translatable="yes">View Installed Applications</property>
+                    <property name="child">
+                      <object class="GtkBox">
+                        <property name="orientation">horizontal</property>
+                        <property name="spacing">6</property>
+                        <child>
+                          <object class="GtkImage">
+                            <property name="icon-name">library-symbolic</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label" translatable="yes">Installed</property>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
+                    <signal name="toggled" handler="page_toggled_cb" swapped="true" object="BzWindow"/>
+                  </object>
+                </child>
+              </object>
+            </property>
             <child type="end">
               <object class="GtkMenuButton">
-                <property name="primary">True</property>
+                <property name="primary">TRUE</property>
                 <property name="icon-name">open-menu-symbolic</property>
                 <property name="has-tooltip">TRUE</property>
                 <property name="tooltip-text" translatable="yes">Main Menu</property>
