--- a/src/bz-browse-widget.ui
+++ b/src/bz-browse-widget.ui
@@ -25,20 +25,27 @@
             <property name="name">content</property>
             <property name="title" translatable="yes">Browser</property>
             <property name="child">
-              <object class="GtkScrolledWindow">
-                <property name="hscrollbar-policy">never</property>
+              <object class="AdwClamp">
+                <property name="maximum-size">3000</property>
+                <property name="tightening-threshold">2500</property>
                 <property name="child">
-                  <object class="GtkListView">
-                    <property name="model">
-                      <object class="GtkNoSelection">
-                        <binding name="model">
-                          <lookup name="content-provider">BzBrowseWidget</lookup>
-                        </binding>
-                      </object>
-                    </property>
-                    <property name="factory">
-                      <object class="GtkBuilderListItemFactory">
-                        <property name="bytes"><![CDATA[
+                  <object class="GtkScrolledWindow">
+                    <property name="hscrollbar-policy">never</property>
+                    <property name="child">
+                      <object class="GtkListView">
+                        <style>
+                          <class name="view"/>
+                        </style>
+                        <property name="model">
+                          <object class="GtkNoSelection">
+                            <binding name="model">
+                              <lookup name="content-provider">BzBrowseWidget</lookup>
+                            </binding>
+                          </object>
+                        </property>
+                        <property name="factory">
+                          <object class="GtkBuilderListItemFactory">
+                            <property name="bytes"><![CDATA[
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="GtkListItem">
@@ -56,6 +63,8 @@
   </template>
 </interface>
 ]]>
+                            </property>
+                          </object>
                         </property>
                       </object>
                     </property>
