--- a/src/bz-installed-page.ui
+++ b/src/bz-installed-page.ui
@@ -24,13 +24,12 @@
             <property name="name">content</property>
             <property name="title" translatable="yes">BzInstalledPage</property>
             <property name="child">
-              <object class="GtkScrolledWindow">
-                <property name="hscrollbar-policy">never</property>
+              <object class="AdwClamp">
+                <property name="maximum-size">1200</property>
                 <property name="child">
-                  <object class="GtkCenterBox">
-                    <property name="margin-top">10</property>
-                    <property name="margin-bottom">10</property>
-                    <property name="center-widget">
+                  <object class="GtkScrolledWindow">
+                    <property name="hscrollbar-policy">never</property>
+                    <property name="child">
                       <object class="GtkListView">
                         <style>
                           <class name="navigation-sidebar"/>
