--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -248,19 +248,20 @@
               </object>
             </child>
             <property name="title-widget">
-              <object class="GtkBox" id="title_widget">
-                <property name="orientation">horizontal</property>
+              <object class="AdwToggleGroup" id="title_toggle_group">
+                <!-- <style> -->
+                <!--   <class name="round"/> -->
+                <!-- </style> -->
                 <property name="homogeneous">TRUE</property>
-                <property name="spacing">3</property>
                 <child>
-                  <object class="GtkToggleButton" id="curated_btn">
-                    <style>
-                      <class name="flat"/>
-                    </style>
-                    <property name="has-tooltip">TRUE</property>
-                    <property name="tooltip-text" translatable="yes">View Curated Applications</property>
+                  <object class="AdwToggle">
+                    <property name="tooltip" translatable="yes">View Curated Applications</property>
+                    <property name="name">curated</property>
                     <property name="child">
                       <object class="GtkBox">
+                        <property name="halign">center</property>
+                        <property name="margin-start">15</property>
+                        <property name="margin-end">15</property>
                         <property name="orientation">horizontal</property>
                         <property name="spacing">6</property>
                         <child>
@@ -275,18 +276,17 @@
                         </child>
                       </object>
                     </property>
-                    <signal name="toggled" handler="page_toggled_cb" swapped="true" object="BzWindow"/>
                   </object>
                 </child>
                 <child>
-                  <object class="GtkToggleButton" id="installed_btn">
-                    <style>
-                      <class name="flat"/>
-                    </style>
-                    <property name="has-tooltip">TRUE</property>
-                    <property name="tooltip-text" translatable="yes">View Installed Applications</property>
+                  <object class="AdwToggle">
+                    <property name="tooltip" translatable="yes">View Installed Applications</property>
+                    <property name="name">installed</property>
                     <property name="child">
                       <object class="GtkBox">
+                        <property name="halign">center</property>
+                        <property name="margin-start">15</property>
+                        <property name="margin-end">15</property>
                         <property name="orientation">horizontal</property>
                         <property name="spacing">6</property>
                         <child>
@@ -301,9 +301,9 @@
                         </child>
                       </object>
                     </property>
-                    <signal name="toggled" handler="page_toggled_cb" swapped="true" object="BzWindow"/>
                   </object>
                 </child>
+                <signal name="notify::active-name" handler="page_toggled_cb" swapped="true" object="BzWindow"/>
               </object>
             </property>
             <child type="end">
@@ -313,29 +313,6 @@
                 <property name="has-tooltip">TRUE</property>
                 <property name="tooltip-text" translatable="yes">Main Menu</property>
                 <property name="menu-model">primary_menu</property>
-              </object>
-            </child>
-            <child type="end">
-              <object class="GtkRevealer">
-                <property name="transition-type">crossfade</property>
-                <property name="transition-duration">500</property>
-                <property name="child">
-                  <object class="BzProgressBar">
-                    <property name="has-tooltip">TRUE</property>
-                    <property name="tooltip-text" translatable="yes">Current transaction progress</property>
-                    <property name="valign">center</property>
-                    <binding name="fraction">
-                      <lookup name="current-progress">
-                        <lookup name="transaction-manager">BzWindow</lookup>
-                      </lookup>
-                    </binding>
-                  </object>
-                </property>
-                <binding name="reveal-child">
-                  <lookup name="active">
-                    <lookup name="transaction-manager">BzWindow</lookup>
-                  </lookup>
-                </binding>
               </object>
             </child>
           </object>
