--- a/src/bz-installed-page.ui
+++ b/src/bz-installed-page.ui
@@ -30,7 +30,7 @@
                   <object class="GtkScrolledWindow">
                     <property name="hscrollbar-policy">never</property>
                     <property name="child">
-                      <object class="GtkListView">
+                      <object class="GtkListView" id="list_view">
                         <style>
                           <class name="navigation-sidebar"/>
                         </style>
